--- a/client/src/components/DisplaySession/DisplayMySession/DisplayMySession.module.css
+++ b/client/src/components/DisplaySession/DisplayMySession/DisplayMySession.module.css
@@ -616,7 +616,8 @@
   }
 
   .forecastHeader {
-    padding: 0.75rem 0;
+    padding: 0rem 0;
+    padding-top: 1em;
   }
 
   .forecastContent {
